play btn created

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <title>Play the piano</title>
   </head>
   <body>
-    
-    <ul>
-      <li>do</li>
-      <li>re</li>
-      <li>mi</li>
-      <li>fa</li>
-      <li>sol</li>
-      <li>lja</li>
-      <li>si</li>
-    </ul>
+<div class="container">
+  <ul>
+    <li>do</li>
+    <li>re</li>
+    <li>mi</li>
+    <li>fa</li>
+    <li>sol</li>
+    <li>lja</li>
+    <li>si</li>
+  </ul>
+<div class="button">
+  <button id="btn">play</button>  
+</div>
+
+</div>
 
     <script src="script.js"></script>
   </body>
